--- a/data/rules.yml
+++ b/data/rules.yml
@@ -13,7 +13,7 @@ rules:
   - intent: bot_challenge
   - action: utter_iamabot
 
-- rule: Say "done" to end process with bot
+- rule: Say "finish" to end process with bot
   steps:
   - intent: done_with_bot
   - action: utter_thank_customer
@@ -38,6 +38,7 @@ rules:
   - action: action_confirmation_msg
   - action: utter_next_step
 
+
 - rule: Submit Search form 
   condition:
   - active_loop: search_form
@@ -57,6 +58,8 @@ rules:
   - action: utter_finished_form
   - action: action_confirmation_msg
   - action: utter_next_step
+  - intent: restrictions
+  - action: utter_restriction_msg
 
     
 
